# flask-copilot

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  DATABASE_README.md  Dockerfile  LICENSE  README.md  cert.pem  check_sidebar.py  checkpoint_report.py  database_output  db_config.py  flaskcopilot.db  launch_copilot.sh  mock_server.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tal_run_server.sh  test_background_persistence.py  test_e2e.py  test_remote_db.py  test_save_load.py
.codex/skills/codebase-reuse/: SKILL.md
backend/: auth.py  server.py
backend/database/: engine.py  models.py  schemas.py
backend/routers/: projects.py  sessions.py  webui.py
charge-backend/: README.md  aizynth_backend_funcs.py  backend_helper_funcs.py  backend_manager.py  callback_logger.py  charge_backend_custom.py  charge_server.py  flaskv2_tool_server.py  lmo_charge_backend_funcs.py  lmo_tool_server.py  molecular_property_surrogates_tool_servers.py  retro_charge_backend_funcs.py  retro_tool_server.py  tool_registration.py
charge-backend/prompts/: lmo_refine_prompt.txt  lmo_user_prompt.txt
charge_backend/: README.md  agent_chat_metadata.py  aizynth_backend_funcs.py  attachments.py  backend_helper_funcs.py  backend_manager.py  builtin_tools.py  callback_logger.py  charge_backend_custom.py  charge_server.py  experiment.py  flask_experiment.py  flask_session.py  flaskv2_tool_server.py  install.py  lmo_charge_backend_funcs.py  lmo_tool_server.py  local_mcp_proxy.py  molecular_property_surrogates_tool_servers.py  molecule_naming.py  prompt_debugger.py  rdkit_mol_differ.py  rdkitjs_payload.py  retro_charge_backend_funcs.py  retro_tool_server.py  rsa_algorithm.py  structures.py  tool_registration.py
charge_backend/alembic/: env.py
charge_backend/alembic/versions/: b7388c38dd26_initial_table_generation.py
charge_backend/database/: database.py  deps.py  main.py  models.py
charge_backend/database/routes/: experiment.py  project.py  user.py
charge_backend/lmo/: LMOTask.py  lmo_charge_backend_funcs.py  lmo_task.py
charge_backend/lmo/prompts/: lmo_refine_prompt.txt  lmo_user_prompt.txt
charge_backend/moleculedb/: dynamic_import.py  molecule_naming.py  purchasable.py  reactiondb_query.py
charge_backend/pdf/: __init__.py  pdf_document.py  registry.py
charge_backend/prompts/: lmo_refine_prompt.txt  lmo_user_prompt.txt
charge_backend/retrosynthesis/: AiZynthTools.py  RetrosynthesisTask.py  __init__.py  ai.py  ai_rsa.py  aizynth_tools.py  alternatives.py  context.py  database.py  mapping.py  reaction_smiles.py  reaction_task.py  retrosynthesis_task.py  template.py
charge_backend/retrosynthesis/prompts/: rsa_rag_aggregation.txt  rsa_rag_proposal.txt  rsa_rag_system.txt  rsa_standalone_aggregation.txt  rsa_standalone_proposal.txt  rsa_standalone_system.txt
charge_backend/tests/: test_agent_histories.py  test_attachments.py  test_custom_reaction_integration.py  test_custom_reaction_smiles.py  test_data_classification.py  test_graph_context.py  test_pdf_registry.py  test_problem_context_lifecycle.py  test_rdkit_mol_differ.py  test_reaction_smiles_retro.py  test_websocket_callbacks.py
charge_backend/utils/: helper_funcs.py
db_backend/: __init__.py  auth.py  session_state_service.py  timestamps.py
db_backend/database/: engine.py  models.py  schemas.py
db_backend/routers/: projects.py  sessions.py
dockerscripts/: launch_servers.sh
docs/: highlighting_tradeoffs.md
flask-app/: index.html  nohup.out  package-lock.json  package.json  tsconfig.json  vite.config.ts
flask-app/public/: index.html
flask-app/src/: App.js  App.tsx  animations.css  config.ts  constants.ts  index.js  index.tsx  style.css  tree_utils.ts  types.ts  utils.ts
flask-app/src/components/: combined_customization_modal.tsx  customization_modal.tsx  graph.tsx  markdown.tsx  metrics.tsx  modal.tsx  molecule.tsx  molecule_properties.tsx  multi_select_tools.tsx  optimization_customization_content.tsx  (+8 more)
flask_copilot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
rdkitjs_bundle/rdkitjs/: README.md  reactionPayload.ts
rdkitjs_bundle/services/: __init__.py  mol_differ.py  rdkitjs_payload.py  rdkitjs_payload_demo.py
tests/: test_experiment_load.spec.ts  test_experiment_switch.spec.ts  test_full_flow.spec.ts  test_load_verify.spec.ts  test_reload_persistence.spec.ts
(+5 files in other folders)
