[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flask-copilot"
version = "0.1.0"
description = "FLASK-copilot: Interactive Agentic Framework for Molecular discovery"
authors = []
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "charge>=0.1.0",
    "lc_conductor>=0.1.0",
    "flask_tools>=0.1.0",
    "mcp>=1.10.0",
    "jsonschema>=4.17.3",
    "loguru>=0.7.0",
    "pydantic>=2.11.0",
    "click",
    "pre-commit",
    "black",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "websockets",
    "requests",
    "PyMuPDF>=1.24.0",
    "sqlalchemy>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["charge_backend*"]

[tool.pytest.ini_options]
# Configures pytest-asyncio to automatically discover and run async test functions
asyncio_mode = "auto"

# Some custom markers to help API testing
markers = [
    "num_projects(n): mark test to use n random projects",
    "num_experiments(n): mark test to use n random experiments",
]

# This creates the console script
[project.scripts]
flask-copilot-install = "charge_backend.install:main"

[project.optional-dependencies]
# This is the manually identified set of necessary tools for AiZynthFinder 4.4.0 to work with a --no-deps install
# pip3 install --no-deps aizynthfinder reaction-utils
aizynthfinder = ["paretoset", "rdchiral", "wrapt_timeout_decorator", "swifter", "apted", "scipy", "onnxruntime", "dask[dataframe]>=2025.9.0", "tables", "networkx", "xxhash", "jinja2", " markupsafe"]

# Define a set of optional packages for use when deploying persistent data services
pds = ["flask-copilot[aizynthfinder]"]

all = ["flask-copilot[aizynthfinder]"]


[tool.alembic]

# path to migration scripts.
# this is typically a path given in POSIX (e.g. forward slashes)
# format, relative to the token %(here)s which refers to the location of this
# ini file
script_location = "%(here)s/charge_backend/alembic"

# template used to generate migration file names; The default value is %%(rev)s_%%(slug)s
# Uncomment the line below if you want the files to be prepended with date and time
# see https://alembic.sqlalchemy.org/en/latest/tutorial.html#editing-the-ini-file
# for all available tokens
# file_template = "%%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s"
# Or organize into date-based subdirectories (requires recursive_version_locations = true)
# file_template = "%%(year)d/%%(month).2d/%%(day).2d_%%(hour).2d%%(minute).2d_%%(second).2d_%%(rev)s_%%(slug)s"

# additional paths to be prepended to sys.path. defaults to the current working directory.
prepend_sys_path = [
    "."
]

[[tool.alembic.post_write_hooks]]
# lint with attempts to fix using "ruff" - use the module runner, against the "ruff" module
name = "ruff"
type = "module"
module = "ruff"
options = "check --fix REVISION_SCRIPT_FILENAME"
